crates/tui/snapshots/fullscreen/chat_view/accounting_bottom_statusline_fullscreen.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&buffer)
---
  /work/ash                                                        [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                             
  ────────────────────────────────────────────────────────────────────────────  
  cache hit 75.0% · cost $0.01008                                               
  ⏸ Manual
