crates/tui/snapshots/fullscreen/chat_view/dictation_and_permission_fullscreen.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&buffer)
---
   branch-layo… /work/ash                                 [— / —] [Dashboard]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Dictation · loading model · ctrl+c to stop dictation                          
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ──────────────────────────────────────────────── Shared model (high) · Plan   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
