crates/tui/snapshots/fullscreen/chat_view/fixed_progress_scrolled_fullscreen.snap
---
source: crates/tui/src/app/chat_view_tests.rs
expression: text(&scrolled)
---
   branch-layo… /work/ash                                 [— / —] [Dashboard]  
                                                                                
● History entry 0                                                               
                                                                                
● History entry 1                                                               
                                                                                
● History entry 2                                                               
                                                                                
● History entry 3                                                               
                                                                                
● History entry 4                                                               
                                                                                
                            Jump to bottom (click) ↓                            
⠋ Working... · 0s · esc to interrupt                                            
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                             
  ──────────────────────────────────────────────── Shared model (high) · Plan   
                                                                                
  ⏸ Manual
